# SparseVideo

./: .gitignore  AGENTS.md  CLAUDE.md  KERNEL_AUDIT.md  LICENSE  NOTICE  PARITY_STATUS.md  README.md  cmd.sh  cp.sh  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
example/animate/: 1.txt
example/control/: 1.txt
example/flf2v/: 1.txt
example/i2v/: 1.txt
example/inpainting/: prompt.txt
example/s2v/: 1.txt  1.txt.orig
prompt/: all-backbone.md
result/inference/: metrics.jsonl
scripts/: _diffsynth_models.py  audit_parity.py  build_env.sh  compare_video_quality.py  download_diffsynth_models.sh  download_models.sh  infer.py  infer_diffsynth.py  infer_diffusers.py  inference.sh  inference_diffsynth.sh  inference_diffusers.sh  make_test_inputs.py  run_diffsynth_parallel.py  smoke_diffsynth_methods.py
scripts/_infer/: __init__.py  models.py
scripts/_infer_diffsynth/: models.py
scripts/_infer_diffusers/: args.py  config.py  models.py  pipeline.py  preflight.py  profiles.py  utils.py
scripts/download/: download_diffsynth_models.sh  download_models.sh
scripts/metric/: psnr.py  ssim.py
scripts/utils/: preprocess_wan_animate.py
src/sparsevideo/: __init__.py  _api.py  _diffsynth.py  _diffusers.py  _flash_attn.py  _model_info.py  _registry.py  _runtime.py  _step_tracker.py  _support.py
src/sparsevideo/kernels/: README.md  __init__.py  _build.py  _cutlass.py  block_sparse_attn.py  co_cluster.py  draft_block_sparse_runtime.py  dynamic_map.py  flashinfer_block_sparse.py  fused_norm_rope.py  kmeans.py  l2norm.py  layernorm.py  modulate.py  permute.py  sageattention_runtime.py  scatter_mean.py  sparsity.py  spas_sage_runtime.py  sta_triton.py  utils.py
src/sparsevideo/kernels/_flashinfer/: LICENSE
src/sparsevideo/kernels/_flashinfer/csrc/: batch_prefill.cu  batch_prefill_jit_pybind.cu
src/sparsevideo/kernels/_flashinfer/flashinfer/: __init__.py
src/sparsevideo/kernels/_flashinfer/flashinfer/jit/: __init__.py  env.py
src/sparsevideo/kernels/_flashinfer/sparsevideo_flashinfer/: decode.py  sparse.py
src/sparsevideo/kernels/_flashinfer/sparsevideo_flashinfer/jit/: cpp_ext.py  env.py  utils.py
src/sparsevideo/kernels/_flashinfer/spdlog/: LICENSE
src/sparsevideo/kernels/native/: README.md
src/sparsevideo/kernels/native/adacluster/: __init__.py  triton_cluster_sparse_attn.py  triton_cluster_sparse_attn_topk.py
src/sparsevideo/kernels/native/draft_block_sparse/: README.md  README.upstream.md  _ext.py  setup.py  setup.sh
src/sparsevideo/kernels/native/draft_block_sparse/block_sparse_attn/: block_sparse_attn_interface.py
src/sparsevideo/kernels/native/flashomni/: README.md  _ext.py  setup.py
src/sparsevideo/kernels/native/flashomni/csrc/: aot_default_additional_params.h
src/sparsevideo/kernels/native/flashomni/flashomni/: _build_meta.py
src/sparsevideo/kernels/native/sageattention/: README.md  _ext.py
src/sparsevideo/kernels/native/spargeattn/: README.md  _ext.py  setup.sh
src/sparsevideo/kernels/native/sta_h100/: CMakeLists.txt  README.md  __init__.py  setup.sh
src/sparsevideo/kernels/native/svg_svoo_fused/: CMakeLists.txt  _ext.py  build.py  setup.sh
src/sparsevideo/methods/: README.md  __init__.py  _base.py  _config.py  _layout.py  _schedule.py  adacluster.py  dense.py  draft.py  flashomni.py  radial.py  sap.py  spargeattn.py  sta.py  svg.py  svg1.py  svg2.py  svoo.py  topk.py
src/sparsevideo/methods/adacluster/: __init__.py  config.py  config.yaml  method.py
src/sparsevideo/methods/dense/: __init__.py  config.py  config.yaml  method.py
src/sparsevideo/methods/draft/: __init__.py  config.py  config.yaml  method.py
src/sparsevideo/methods/flashomni/: __init__.py  config.py  config.yaml  hunyuan_forward.py  method.py  policy.py
src/sparsevideo/methods/radial/: __init__.py  config.py  config.yaml  method.py
src/sparsevideo/methods/spargeattn/: __init__.py  config.py  config.yaml  hunyuan_forward.py  method.py
src/sparsevideo/methods/sta/: __init__.py  config.py  config.yaml  mask_strategy_wan.json  method.py  ops.py  search.py
src/sparsevideo/methods/sta/mask_strategies/: mask_strategy_allegro.json  mask_strategy_cogvideox_i2v.json  mask_strategy_cogvideox_t2v.json  mask_strategy_hunyuan_t2v.json  mask_strategy_ltx_video.json  mask_strategy_ltx_video_i2v.json  mask_strategy_mochi_1.json  mask_strategy_wan13.json  mask_strategy_wan21_t2v_1_3b.json  mask_strategy_wan21_vace_14b.json  mask_strategy_wan22_animate_14b.json  mask_strategy_wan22_i2v_a14b.json
src/sparsevideo/methods/svg1/: __init__.py  config.py  config.yaml  method.py  placement.py
src/sparsevideo/methods/svg2/: __init__.py  config.py  config.yaml  kmeans.py  method.py
src/sparsevideo/methods/svgear/: __init__.py  config.py  config.yaml  method.py
src/sparsevideo/methods/svoo/: __init__.py  config.py  config.yaml  method.py  ops.py  sparsity.py  text.py  warmup.py
src/sparsevideo/methods/svoo/sparsity_profiles/: sparsity_hunyuan10_13B_i2v.csv  sparsity_hunyuan10_13B_t2v.csv  sparsity_wan22_A14B_i2v.csv  sparsity_wan22_A14B_t2v.csv  sparsity_wan_1.3B_t2v.csv  sparsity_wan_14B_i2v.csv  sparsity_wan_14B_t2v.csv
src/sparsevideo/processors/: allegro.py  cogvideox.py  easyanimate.py  hunyuan_fast_block.py  hunyuan_sparse_forward.py  hunyuan_video.py  ltx_video.py  mochi.py  wan.py  wan_fast_block.py
test_inputs/: README.txt
tests/: test_adacluster_parity.py  test_apply_restore.py  test_block_sparse_attn.py  test_dense_warmup.py  test_diffsynth_infer.py  test_draft_parity.py  test_flashomni_parity.py  test_fused_kernel_equivalence.py  test_import_contract.py  test_infer_script.py  test_method_config.py  test_method_layout.py  test_methods.py  test_no_silent_fallback.py  test_packaging_contract.py  test_parity_audit.py  test_per_method_fused_correctness.py  test_processor_equivalence.py  test_radial_parity.py  test_run_diffsynth_parallel.py  test_spargeattn_parity.py  test_sta_parity.py  test_step_tracker.py  test_svg1_parity.py  test_svg2_parity.py  test_svgear_parity.py  test_svoo_parity.py  test_svoo_warmup.py
(+13 files in other folders)
