[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparsevideo"
version = "0.1.0"
description = "Plug-and-play sparse attention for video diffusion models"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
keywords = ["sparse-attention", "video-diffusion", "inference", "triton", "cuda"]
authors = [
    { name = "SparseVideo Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "diffusers>=0.30.0",
    "einops>=0.6.0",
    "jinja2>=3.0",
    "filelock>=3.0",
    "packaging>=21.0",
    "triton>=2.2.0",
    "diffsynth>=2.0.12",
]

[project.urls]
Repository = "https://github.com/Mutual-Luo/SparseVideo"


[project.scripts]
sparsevideo-build-kernels = "sparsevideo.kernels._build:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
