[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparsevideo"
version = "0.1.0"
description = "Plug-and-play sparse attention for video diffusion models"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
keywords = ["sparse-attention", "video-diffusion", "inference", "triton", "cuda"]
authors = [
    { name = "Jiayi Luo" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Everything needed to run is declared here so that, with torch already present
# (required to compile the kernels, exactly like flash-attn), a single
#   pip install sparsevideo --no-build-isolation
# pulls in every runtime dependency automatically — no piecemeal setup.
dependencies = [
    "torch>=2.1.0",
    "diffusers>=0.30.0",
    "einops>=0.6.0",
    "pyyaml>=5.4",
    "jinja2>=3.0",
    "filelock>=3.0",
    "packaging>=21.0",
    "triton>=2.2.0",
    "diffsynth>=2.0.12",
]

[project.optional-dependencies]
# flashinfer-python is the only heavy, torch/CUDA-version-coupled backend, kept
# optional so a version mismatch can never break the base install. Needed only
# for the `flashomni` method:  pip install sparsevideo[flashinfer]
flashinfer = ["flashinfer-python>=0.1.0"]
all = ["flashinfer-python>=0.1.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[project.urls]
Repository = "https://github.com/Mutual-Luo/SparseVideo"

[project.scripts]
sparsevideo-build-kernels = "sparsevideo.kernels._build:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
